Improve login poster db query